...
                        stopButton
                            .glassEffect()
                            .glassEffectTransition(.materialize)
                    }

                    ToolbarItem(placement: .topBarTrailing) {
                        Button("Resume", systemImage: "play.fill", role: .confirm, action: resumeHandler)
                            .tint(Color(uiColor: .deltaPurple))
                            .glassEffect()
                            .glassEffectTransition(.materialize)
                    }
                }
            }
...
@available(iOS 26, *)
#Preview {
    let saveStateItem = MenuItem(text: NSLocalizedString("Save State", comment: ""), image: #imageLiteral(resourceName: "SaveSaveState"), action: { $0.isSelected.toggle() })
    let loadStateItem = MenuItem(text: NSLocalizedString("Load State", comment: ""), image: #imageLiteral(resourceName: "LoadSaveState"), action: { $0.isSelected.toggle() })
    let cheatCodesItem = MenuItem(text: NSLocalizedString("Cheat Codes", comment: ""), image: #imageLiteral(resourceName: "CheatCodes"), action: { $0.isSelected.toggle() })
    let fastForwardItem = MenuItem(text: NSLocalizedString("Fast Forward", comment: ""), image: #imageLiteral(resourceName: "FastForward"), action: { $0.isSelected.toggle() })
    let sustainButtonsItem = MenuItem(text: NSLocalizedString("Hold Buttons", comment: ""), image: #imageLiteral(resourceName: "SustainButtons"), action: { $0.isSelected.toggle() })
    let screenshotItem = MenuItem(text: NSLocalizedString("Screenshot", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
    
    let optionA = MenuItem(text: NSLocalizedString("Option A", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
    let optionB = MenuItem(text: NSLocalizedString("Option B", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
    let optionC = MenuItem(text: NSLocalizedString("Option C", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
    let optionD = MenuItem(text: NSLocalizedString("Option D", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
    let optionE = MenuItem(text: NSLocalizedString("Option E", comment: ""), image: #imageLiteral(resourceName: "Screenshot"), action: { $0.isSelected.toggle() })
...
